# ros-crawler

./: .gitignore  README.txt  start_teleop.bash
devel/: .catkin  local_setup.sh
devel/include/roboclaw_node/: RoboClawConfig.h
devel/lib/pkgconfig/: crawler_roboclaw.pc  crawler_teleop.pc  roboclaw_node.pc
devel/lib/python3/dist-packages/roboclaw_driver/: __init__.py
devel/lib/python3/dist-packages/roboclaw_node/cfg/: RoboClawConfig.py
devel/share/crawler_roboclaw/cmake/: crawler_roboclawConfig.cmake
devel/share/crawler_teleop/cmake/: crawler_teleopConfig.cmake
devel/share/roboclaw_node/cmake/: roboclaw_nodeConfig.cmake
devel/share/roboclaw_node/docs/: RoboClawConfig-usage.dox  RoboClawConfig.dox  RoboClawConfig.wikidoc
src/: README.txt
src/crawler_roboclaw/: CMakeLists.txt  package.xml
src/crawler_roboclaw/launch/: roboclaw.launch
src/crawler_roboclaw/src/: EncoderOdom.py  roboclaw.py
src/crawler_roboclaw/src/roboclaw_driver/: roboclaw_driver.py
src/crawler_teleop/: CMakeLists.txt
src/crawler_teleop/launch/: teleop.launch
src/crawler_teleop/src/: teleop.py  teleop_mux.py
